<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_material_light">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <ImageView
        android:id="@+id/ivProfilePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/txtEmailSignUp" />
    <EditText
        android:layout_centerInParent="true"
        android:id="@+id/txtEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>
    <EditText
        android:layout_below="@id/txtEmailSignUp"
        android:id="@+id/txtNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Name"
        android:inputType="textPersonName"
        android:hint="@string/name"/>
    <EditText
        android:id="@+id/txtUserNameSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtNameSignUp"
        android:autofillHints="Username"
        android:inputType="text"
        android:hint="@string/username"/>
    <EditText
        android:id="@+id/txtPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtUserNameSignUp"
        android:autofillHints="Password"
        android:inputType="textPassword"
        android:hint="@string/password"/>
    <Button
        android:id="@+id/btnConfirmSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sign_up"/>

    <include layout="@layout/footer"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>

</RelativeLayout>