<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dk.easv.ATForum.Users.ProfileActivity"
    android:background="@color/background_material_light">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/profileImage"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/header"
        />

    <EditText
        android:id="@+id/namePlaceholder"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_centerVertical="true"
        />

    <EditText
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:autofillHints="Name"
        android:inputType="textPersonName"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/usernamePlaceholder"
        android:enabled="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_below="@+id/namePlaceholder"
        />

    <EditText
        android:id="@+id/txtProfileUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtName"
        android:layout_centerInParent="true"
        android:autofillHints="Username"
        android:inputType="text"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/emailPlaceholder"
        android:enabled="false"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:layout_below="@+id/usernamePlaceholder"
        />

    <EditText
        android:id="@+id/txtProfileEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtProfileUsername"
        android:layout_centerInParent="true"
        android:autofillHints="Email"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/editProfile"
        />

    <Button
        android:id="@+id/btnEditOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:layout_alignParentBottom="true"
        android:text="@string/submit"
        />

    <include layout="@layout/footer"
        android:layout_alignParentBottom="true"
        android:layout_height="60dp"
        android:layout_width="match_parent"/>
</RelativeLayout>